<resources>
    <string name="app_name">Buddy Plans</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>
    <string name="sign_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment">Groups fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">friends fragment</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="sample_content">In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content still not being ready. Think of a news blog thats filled with content hourly on the day of going live. However, reviewers tend to be distracted by comprehensible content, say, a random text copied from a newspaper or the internet. The are likely to focus on the text, disregarding the layout and its elements. Besides, random text risks to be unintendedly humorous or offensive, an unacceptable risk in corporate environments. Lorem ipsum and its many variants have been employed since the early 1960ies, and quite likely since the sixteenth century. </string>
    <string name="fb_login_protocol_scheme">fb148052065742272</string>
    <string name="facebook_app_id">148052065742272</string>
    <string name="edit_group">Edit Group</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_profile">Your Profile</string>
    <string name="nav_logout">Log Out</string>
    <string name="favourite_chats">Favourite Chats</string>
    <string name="add_location">Add Location</string>
    <string name="mark_as_favourite">Mark as Favourite</string>
    <string-array name="nav_item_activity_titles">
        <item>Your Profile</item>
    </string-array>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="db_name">buddydb</string>
    <string name="proceed_setreminder">Proceed</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="exit_group">Exit Group</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="show_profile">Show Profile</string>
    <string name="nointernet">Internet not available, Check your internet connectivity and try again !</string>
    <string name="favourite_empty">No favourite chats available</string>
    <string name="no_friends">No friends available to select from</string>
    <string name="invite_others">Invite Others</string>
    <string name="invite_message">Hey. Check out this cool new app \'Buddy Plans\' in playstore. \n</string>
    <string name="appsegment">/Buddyplans/pictures</string>
    <string name="fav_alert">Chat needs to have atleast one message to make it favourite!</string>
</resources>
