<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/mark_favourite"
        android:title="@string/mark_as_favourite"
        android:icon="@drawable/fav_select"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/add_reminder"
        android:title="@string/add_reminder"
        android:icon="@drawable/add_reminder"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/block_friend"
        android:title="@string/block"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/unblock_friend"
        android:title="@string/unblock"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/show_profile"
        android:title="@string/show_profile"
        app:showAsAction="never"
        android:visible="true"
        />





</menu>